--- a/html/index.html
+++ b/html/index.html
@@ -92,11 +92,7 @@
         </div>
         <!-- Imagem -->
         <div class="col-md-6 text-center" id="img">
-          <img
-            src="../img/img-removebg-preview.png"
-            alt="Imagem"
-            class="img-fluid"
-          />
+          <img src="../img/principal.png" alt="Imagem" class="img-fluid" />
         </div>
       </div>
     </section>
@@ -117,58 +113,61 @@
     -->
 
     <section id="Phishing" class="container mt-5">
-      <h2>O que é Phishing?</h2>
-      <h5>
-        Phishing é um tipo de ataque cibernético que usa e-mails, mensagens de
-        texto, telefonemas ou sites fraudulentos para enganar as pessoas a
-        compartilhar dados confidenciais, baixar malware ou se expor a crimes
-        cibernéticos de outras formas.
-      </h5>
-      <p>
-        Ataques de phishing são uma forma de engenharia social. Ao contrário de
-        outros ataques cibernéticos, que têm como alvo direto redes e recursos,
-        os ataques de engenharia social usam erros humanos, histórias falsas e
-        táticas de pressão para manipular as vítimas e causar danos
-        involuntários a si mesmas ou a suas organizações.
-      </p>
-      <p>
-        Em um golpe típico de phishing, um hacker finge ser alguém em quem a
-        vítima confia, como um colega, chefe, figura de autoridade ou
-        representante de uma marca conhecida. O hacker envia uma mensagem
-        direcionando a vítima para pagar uma fatura, abrir um anexo, clicar em
-        um link ou realizar alguma outra ação.
-      </p>
-      <p>
-        Por confiar na suposta fonte da mensagem, o usuário segue as instruções
-        e cai na armadilha do golpista. Essa "fatura" pode levar diretamente à
-        conta de um hacker. Esse anexo pode instalar ransomware no dispositivo
-        do usuário. Esse link pode levar o usuário a um site que rouba números
-        de cartões de crédito, números de contas bancárias, credenciais de login
-        ou outros dados pessoais.
-      </p>
+      <div class="definicaoPhishing">
+        <h2>O que é Phishing?</h2>
+        <h5>
+          Phishing é um tipo de ataque cibernético que usa e-mails, mensagens de
+          texto, telefonemas ou sites fraudulentos para enganar as pessoas a
+          compartilhar dados confidenciais, baixar malware ou se expor a crimes
+          cibernéticos de outras formas.
+        </h5>
+        <p>
+          Ataques de phishing são uma forma de engenharia social. Ao contrário
+          de outros ataques cibernéticos, que têm como alvo direto redes e
+          recursos, os ataques de engenharia social usam erros humanos,
+          histórias falsas e táticas de pressão para manipular as vítimas e
+          causar danos involuntários a si mesmas ou a suas organizações. Em um
+          golpe típico de phishing, um hacker finge ser alguém em quem a vítima
+          confia, como um colega, chefe, figura de autoridade ou representante
+          de uma marca conhecida. O hacker envia uma mensagem direcionando a
+          vítima para pagar uma fatura, abrir um anexo, clicar em um link ou
+          realizar alguma outra ação. Por confiar na suposta fonte da mensagem,
+          o usuário segue as instruções e cai na armadilha do golpista. Essa
+          "fatura" pode levar diretamente à conta de um hacker. Esse anexo pode
+          instalar ransomware no dispositivo do usuário. Esse link pode levar o
+          usuário a um site que rouba números de cartões de crédito, números de
+          contas bancárias, credenciais de login ou outros dados pessoais.
+        </p>
+        <div id="imgAnzol">
+          <img src="../img/anzol.png" alt="Imagem" class="img-fluid" />
+        </div>
+      </div>
 
-      <h2>Por que o phishing é uma grande ameaça cibernética?</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur
-        adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-        qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit
-        amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut
-        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-        dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
+      <div class="ameaça">
+        <h2>Por que o phishing é uma grande ameaça cibernética?</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum
+          dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+          commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+          velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+          occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+          mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur
+          adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+          ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+          irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+          fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+          sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </div>
 
       <div class="columns">
         <div class="tiposPhishing">
