ajeitando a foto e o menu

--- a/html/login.html
+++ b/html/login.html
@@ -21,13 +21,13 @@
   </head>
 
   <body>
-    <header>
+    <header class="header">
       <nav class="nav-bar">
         <div class="logo_button">
           <div class="logo">
             <h1>CyberOwl</h1>
           </div>
-          <div class="btn">
+          <div class="nav-btn">
             <button onclick="EMmenu()"><img id="img" src="../img/menu_white_36dp.svg" alt=""></button>
           </div>
         </div>
@@ -38,7 +38,7 @@
           <p class="nav-item p2"><a href="../index.html#Boletim" class="nav-link">Boletim</a></p>
           <p class="nav-item p1"><a href="../index.html#Verificar-Url" class="nav-link">Verificador de URL</a></p>
           <p class="nav-item p2"><a href="../index.html#Contatos" class="nav-link">Contatos</a></p>
-          <p class="nav-item p1"><a href="cadastro.html" class="nav-link">Cadastro/Login</a></p>
+          <p class="nav-item p1"><a href="cadastro.html" class="nav-link">Cadastro</a></p>
           <p class="nav-item p2"><a href="sobre.html" class="nav-link">Sobre Nós</a></p>
         </div>
     
