--- a/html/sobre.html
+++ b/html/sobre.html
@@ -15,14 +15,14 @@
           <div class="logo">
             <h1>CyberOwl</h1>
           </div>
-          <div class="btn">
+          <div class="nav-btn">
             <button onclick="EMmenu()"><img id="img" src="../img/menu_white_36dp.svg" alt=""></button>
           </div>
         </div>
     
     
         <div class="nav-list esconder" id="menu">
-          <p class="nav-item p1"><a href="../index.html#Inicio" class="nav-link">Inicio</a></p>
+          <p class="nav-item p1"><a href="../index.html#Introdução" class="nav-link">Inicio</a></p>
           <p class="nav-item p2"><a href="../index.html#Boletim" class="nav-link">Boletim</a></p>
           <p class="nav-item p1"><a href="../index.html#Verificar-Url" class="nav-link">Verificador de URL</a></p>
           <p class="nav-item p2"><a href="../index.html#Contatos" class="nav-link">Contatos</a></p>
