--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="css/menu.css">
     <script src="../js/APIs.js" defer></script>
     <script src="../js/menu.js" defer></script>
-    <script src="../js/card.js"></script>
+    <script src="../js/card.js" defer></script>
   </head>
   <body>
     <header class="header">
