rodape no index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/menu.css" />
     <link rel="stylesheet" href="css/acessibilidade.css">
+    <link rel="stylesheet" href="css/rodape.css">
 
     <script src="js/APIs.js" defer></script>
     <script src="js/menu.js" defer></script>
@@ -373,9 +374,9 @@
       </p>
     </section>
 
-    <footer class="container mt-5">
+    <footer >
       <!-- RodaPé -->
-      <div id="Contatos">
+      <div id="Contatos" class="container mt-5">
         <p>Email: CyberOwl@gmail.com</p>
         <p>Whatsapp: (21) 99999-9999</p>
         <p>Desenvolvedores: Gustavo, Julio, Liz, Maria</p>
