Rodape em todas as telas

--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/menu.css" />
+    <link rel="stylesheet" href="../css/rodape.css">
     <script src="../js/menu.js" defer></script>
     <title>Cadastro</title>
   </head>
@@ -92,6 +93,17 @@
         </div>
       </div>
     </div>
+
+    <footer>
+      <!-- RodaPé -->
+      <div id="Contatos" class="container mt-5">
+        <p>Email: CyberOwl@gmail.com</p>
+        <p>Whatsapp: (21) 99999-9999</p>
+        <p>Desenvolvedores: Gustavo, Julio, Liz, Maria</p>
+        <p>© 2024 Todos os direitos reservados</p>
+      </div>
+    </footer>
+    
     <script src="../js/cadastro.js"></script>
   </body>
 </html>
