--- a/html/login.html
+++ b/html/login.html
@@ -14,7 +14,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-
+    <link rel="stylesheet" href="../css/rodape.css">
     <!-- JS -->
     <script src="../js/menu.js" defer></script>
     <script src="../js/login.js" defer></script>
@@ -104,5 +104,15 @@
         </div>
       </div>
     </div>
+
+    <footer>
+      <!-- RodaPé -->
+      <div id="Contatos" class="container mt-5">
+        <p>Email: CyberOwl@gmail.com</p>
+        <p>Whatsapp: (21) 99999-9999</p>
+        <p>Desenvolvedores: Gustavo, Julio, Liz, Maria</p>
+        <p>© 2024 Todos os direitos reservados</p>
+      </div>
+    </footer>
   </body>
 </html>
