colocando rodape nas telas

--- a/index.html
+++ b/index.html
@@ -374,13 +374,48 @@
       </p>
     </section>
 
-    <footer >
-      <!-- RodaPé -->
-      <div id="Contatos" class="container mt-5">
-        <p>Email: CyberOwl@gmail.com</p>
-        <p>Whatsapp: (21) 99999-9999</p>
-        <p>Desenvolvedores: Gustavo, Julio, Liz, Maria</p>
-        <p>© 2024 Todos os direitos reservados</p>
+    <footer>
+      <div id="footer_content">
+    
+        <ul class="footer-list">
+          <li>
+            <h3>Contato</h3>
+          </li>
+          <li>
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=CyberOwl@gmail.com" target="_blank"
+              class="footer-link">CyberOwl@gmail.com</a>
+          </li>
+          <li>
+            <a href="https://wa.me/5521965149947" target="_blank" class="footer-link">(21) 96514-9947</a>
+          </li>
+        </ul>
+    
+        <ul class="footer-list">
+          <li>
+            <h3>Conheça-nos</h3>
+          </li>
+          <li>
+            <a href="html/sobre.html" class="footer-link">Sobre Nós</a>
+          </li>
+        </ul>
+        <ul class="footer-list">
+          <li>
+            <h3>Desenvolvido por:</h3>
+          </li>
+          <li>
+            <p class="footer-D">Maria</p>
+          </li>
+          <li>
+            <p class="footer-D">Gustavo</p>
+          </li>
+          <li>
+            <p class="footer-D">Julio</p>
+          </li>
+        </ul>
+      </div>
+      <div id="footer_copyright">
+        &#169
+        2024 todos os direitos reservados
       </div>
     </footer>
     <button class="cn" onclick="acesse()"><img src="img/brilho-do-sol.png" alt="" id="ace"></button>
