--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/menu.css" />
-    <link rel="stylesheet" href="css/acessibilidade.css">
-    <link rel="stylesheet" href="css/rodape.css">
+    <link rel="stylesheet" href="css/acessibilidade.css" />
+    <link rel="stylesheet" href="css/rodape.css" />
 
     <script src="js/APIs.js" defer></script>
     <script src="js/menu.js" defer></script>
@@ -139,7 +139,6 @@
             incluem:
           </p>
           <div class="fileira_card">
-
             <div class="centralizar_card">
               <div class="card">
                 <p class="card-text"></p>
@@ -148,15 +147,16 @@
                   No phishing de e-mails em massa, golpistas enviam spam para
                   muitas pessoas, tentando atrair algumas vítimas.
                   <span class="more-text">
-                    Eles disfarçam os e-mails como se fossem de marcas conhecidas,
-                    aumentando a chance de enganar quem é cliente dessas empresas.
-                    Para tornar os e-mails mais convincentes, usam logotipos,
-                    falsificam endereços de e-mail e copiam mensagens reais. Os
-                    e-mails geralmente apelam para emoções ou urgência, com
-                    assuntos como “Problema com seu pedido”. As mensagens pedem
-                    ações que levam à exposição de dados ou download de malware.
-                    Algumas campanhas de phishing coincidem com eventos populares,
-                    como o Prime Day, aproveitando a baixa cautela dos usuários.
+                    Eles disfarçam os e-mails como se fossem de marcas
+                    conhecidas, aumentando a chance de enganar quem é cliente
+                    dessas empresas. Para tornar os e-mails mais convincentes,
+                    usam logotipos, falsificam endereços de e-mail e copiam
+                    mensagens reais. Os e-mails geralmente apelam para emoções
+                    ou urgência, com assuntos como “Problema com seu pedido”. As
+                    mensagens pedem ações que levam à exposição de dados ou
+                    download de malware. Algumas campanhas de phishing coincidem
+                    com eventos populares, como o Prime Day, aproveitando a
+                    baixa cautela dos usuários.
                   </span>
                 </p>
                 <button onclick="toggleText(this)" class="toggleButton">
@@ -164,7 +164,7 @@
                 </button>
               </div>
             </div>
-            
+
             <div class="centralizar_card">
               <div class="card">
                 <p class="card-text"></p>
@@ -184,10 +184,8 @@
                 </button>
               </div>
             </div>
-            
           </div>
           <div class="fileira_card">
-
             <div class="centralizar_card">
               <div class="card">
                 <p class="card-text"></p>
@@ -216,14 +214,15 @@
                 <h3>Vishing</h3>
                 <p class="card-text">
                   O vishing, ou phishing por voz, é um golpe realizado por
-                  chamadas telefônicas, que cresceu 260% entre 2022 e 2023 devido
+                  chamadas telefônicas, que cresceu 260% entre 2022 e 2023
+                  devido
                   <span class="more-text">
                     ao uso de tecnologia VoIP, permitindo milhões de chamadas
-                    automatizadas por dia. Os golpistas falsificam o identificador
-                    de chamadas para parecerem legítimos e assustam as vítimas com
-                    avisos falsos sobre problemas financeiros ou legais,
-                    levando-as a fornecer dados confidenciais ou dinheiro para
-                    "solucionar" os problemas.
+                    automatizadas por dia. Os golpistas falsificam o
+                    identificador de chamadas para parecerem legítimos e
+                    assustam as vítimas com avisos falsos sobre problemas
+                    financeiros ou legais, levando-as a fornecer dados
+                    confidenciais ou dinheiro para "solucionar" os problemas.
                   </span>
                 </p>
                 <button onclick="toggleText(this)" class="toggleButton">
@@ -231,7 +230,6 @@
                 </button>
               </div>
             </div>
-
           </div>
         </div>
       </div>
@@ -374,7 +372,7 @@
       </p>
     </section>
 
-    <footer >
+    <footer>
       <!-- RodaPé -->
       <div id="Contatos" class="container mt-5">
         <p>Email: CyberOwl@gmail.com</p>
@@ -383,6 +381,8 @@
         <p>© 2024 Todos os direitos reservados</p>
       </div>
     </footer>
-    <button class="cn" onclick="acesse()"><img src="img/brilho-do-sol.png" alt="" id="ace"></button>
+    <button class="cn" onclick="acesse()">
+      <img src="img/brilho-do-sol.png" alt="" id="ace" />
+    </button>
   </body>
 </html>
