--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
     <link rel="stylesheet" href="css/menu.css" />
     <link rel="stylesheet" href="css/acessibilidade.css" />
     <link rel="stylesheet" href="css/rodape.css" />
-
-    <script src="js/APIs.js" defer></script>
     <script src="js/menu.js" defer></script>
     <script src="js/card.js" defer></script>
     <script src="js/acessibilidade.js" defer></script>
@@ -42,7 +40,7 @@
             <a href="#Boletim" class="nav-link">Boletim</a>
           </p>
           <p class="nav-item p1">
-            <a href="#Verificar-Url" class="nav-link">Verificador de URL</a>
+            <a href="html/Verificador.html" class="nav-link">Verificador de URL</a>
           </p>
           <p class="nav-item p2">
             <a href="#Contatos" class="nav-link">Contatos</a>
@@ -292,23 +290,6 @@
           erros gramaticais e inconsistências.
         </li>
       </ul>
-    </div>
-    <div class="container mt-5" id="VerificaUrl">
-      <div class="col-md">
-        <h2>Verifique a sua URL</h2>
-        <p>Insira a URL que você deseja verificar sua confiança abaixo:</p>
-        <input
-          type="text"
-          class="form-control"
-          id="url"
-          placeholder="Digite a URL aqui"
-          aria-label="Digite a URL"
-        />
-        <button class="btn btn-primary" onclick="verificar();">
-          Verificar
-        </button>
-        <p id="res"></p>
-      </div>
     </div>
     <section id="Vitimas" class="container mt-5">
       <h2 id="Boletim">O que fazer em caso de ser uma vítima</h2>
