--- a/html/Verificador.html
+++ b/html/Verificador.html
@@ -59,8 +59,8 @@
     <main>
         <div class="container mt-5" id="VerificaUrl">
             <div class="col-md">
-                <h2>Verifique a sua URL</h2>
-                <p>Insira a URL que você deseja verificar sua confiança abaixo:</p>
+                <h1>Este link é seguro?</h1>
+                <p>Analise um URL que você deseja visitar para detectar malwares, sites falsos e ataques de phishing.</p>
                 <input type="text" class="form-control" id="url" placeholder="Digite a URL aqui"
                     aria-label="Digite a URL" />
                 <button class="btn btn-primary" onclick="verificar();">
@@ -71,25 +71,38 @@
         </div>
     </main>
 
+    <div class="container" id="conteudo">
+        <h2>O que o Verificador de Links faz?</h2>
+        <p>O Verificador de Links é uma ferramenta de verificação de URL projetada para ajudar você a evitar malwares, ataques de phishing, botnets e sites falsos</p>
+        <div class="text1">
+            <h5>Evite ataques de phishing</h5>
+            <p>Recebeu um e-mail ou mensagem de texto suspeita? Verifique o link antes de clicar: isso reduzirá muito as chances de você cair em um ataque de phishing.</p>
+        </div>
+        <div class="text2">
+            <h5>Bloqueie sites mal-intencionados</h5>
+            <p>Alguns sites estão repletos de malwares que aguardam para serem baixados e executados no seu dispositivo. O Verificador de Links informa você sobre isso antes que seja tarde demais.</p>
+        </div>
+    </div>
+
     <footer>
         <div id="footer_content">
 
             <ul class="footer-list">
                 <li>
-                    <h3>Contato</h3>
+                    <p>Contato</p>
                 </li>
                 <li>
                     <a href="https://mail.google.com/mail/?view=cm&fs=1&to=CyberOwl@gmail.com" target="_blank"
-                        class="footer-link">CyberOwl@gmail.com</a>
+                        class="footer-link">Email: cyberOwl@gmail.com</a>
                 </li>
                 <li>
-                    <a href="https://wa.me/5521965149947" target="_blank" class="footer-link">(21) 96514-9947</a>
+                    <a href="https://wa.me/5521965149947" target="_blank" class="footer-link">Tel: (21) 96514-9947</a>
                 </li>
             </ul>
 
             <ul class="footer-list">
                 <li>
-                    <h3>Conheça-nos</h3>
+                    <p>Conheça-nos</p>
                 </li>
                 <li>
                     <a href="sobre.html" class="footer-link">Sobre Nós</a>
@@ -97,16 +110,19 @@
             </ul>
             <ul class="footer-list">
                 <li>
-                    <h3>Desenvolvido por:</h3>
+                    <p>Desenvolvido por:</p>
                 </li>
                 <li>
-                    <p class="footer-D">Maria</p>
+                    <p class="footer-D">Maria Clara Bastos</p>
                 </li>
                 <li>
-                    <p class="footer-D">Gustavo</p>
+                    <p class="footer-D">Gustavo Marques</p>
                 </li>
                 <li>
-                    <p class="footer-D">Julio</p>
+                    <p class="footer-D">Julio Cezar</p>
+                </li>
+                <li>
+                    <p class="footer-D">Eliza Vitoria</p>
                 </li>
             </ul>
         </div>
